--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   },
   "dependencies": {
     "express": "3.4.8",
-    "jade": "*"
+    "jade": "*",
+    "mongoose": "^3.8.8",
+    "mongoose-q": "0.0.9",
+    "q": "^1.0.1"
   }
 }
