--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jade": "*",
     "mongoose": "^3.8.8",
     "mongoose-q": "0.0.9",
-    "q": "^1.0.1"
+    "q": "^1.0.1",
+    "github": "^0.1.15"
   }
 }
