--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.4.8",
+    "express": "^3.4.8",
     "jade": "*",
     "mongoose": "^3.8.8",
     "mongoose-q": "0.0.9",
